css/main_page.css
html{
    margin: 0;
   
}
body{
    margin: 0;
    background-color: rgb(14, 16, 39);
    overflow: auto;
    font-family: sans-serif;
}
/*
Defines the sections of the page
*/

.page-select {
    display: flex;
    flex-direction: column;
    width: 15%;
    height: 100vh;
    left: 0%;
    gap: 0px 15px;
    position: fixed;
    justify-content: center;
    overflow:auto;
}
.page-select > a{
    text-transform: capitalize;
    font-style: italic;
    font-size: 1.5vw;
    color:white;
    text-align: center;
    text-decoration: none;
    
    padding-top: 20%;
    padding-bottom: 20%;
    
    
}
.page-select > a:hover{
    background-color: #282E73;
}

@media screen and (max-width: 900px){
    
    .page-select {
        display: flex;
        flex-direction: row;
        width: 100%;
        height: auto;
        
        position: relative;

    }
    .page-select a{
        text-transform: capitalize;
        font-style: italic;
        font-size: 3vh;
        color:white;
        text-align: center;
        text-decoration: none;
        padding-top: 2%;
        padding-bottom: 2%;
    
        padding-left: 5%;
        padding-right: 5%;
    
    
    }
    

}

@media screen and (max-width: 400px) {
  .page-select a {
    text-align: center;
    float: none;
  }
}

/* Content background covers everything except the sections of the page*/

.content-background {
    display: flex;
    flex-direction: column;
    left: 30%;
    width: 100%; 
    height: 85%;
    color: white;
    
}

.content{
    max-width: 1100px;
    margin: 0 auto;
    display: flex;
    flex-direction: column;
    gap: 2rem;
    color: rgb(240, 237, 207);
}

.content > p{
    text-transform: none;
    color: white;
    font-size: 3vh;
}


/*Class for the image for the profile picture*/

.logos{
    display: flex;
    justify-content: center;
}

.logos > img{
    border-radius: 50%;
    max-width: 50%;
    height: auto;
    object-fit: contain;
    border: 0.5vh solid #ddd;
    
   
}

@media screen and (max-width: 900px){
    .logos{
        display: none;
    }

}





/* Intro contains the about section writing. Excludes the logos for linkedin and github profile  */

.intro{
    
    left: 10%;
    height: 100%;
    width: 100%;
    font-size: 3vh;
    color: white;
    text-align: center;
    top: 8%;
}

.last-name{
    color: #5cd8cb;
}


.about-short{
    text-align: center;
}

.enrolled{
    color: rgb(64, 162, 216);
}

.contact{
    display: inline-flex;
    width: 100%;
    color: #90dbd3;
    text-align: center;
    justify-content: center;
    gap: 10px 10px;

}

.contact > a{
    display: flex;
    flex-direction: row;
    align-items: center;
    color: #90dbd3;
}

ion-icon {
    
    color: #90dbd3;

}



.school {
  
    display:flex;
    flex-direction:row;
    font-style: bold;
    width: 100%;
    
    color: white;
    height: 100%;
    top: 20%;
}

.school > p{
    margin-top:0;

}

#loc{
    font-style: italic;
    
    right: 0%;
}

.awards{
    
    font-size: 3vh;
    color: white;
    width: 100%;
    height: 100%;

}

.awards > p{
    
    top: 2%;
    font-style: italic;
}

.awards > ul{
    
    width: 100%;
    height: 100%;
    top: 6%;
    
}

#two{
    height: 100%;
    top: 45%;
}

#two > .awards > ul{
    
    top: 2%;
}

#uni {
    
    width: 40%;
    height: 30%;

    bottom: 5%;
}

#second{
    
    width: 40%;
    height: 30%;
    right: 0%;
    bottom: 5%;
}

.work {
    
    display:flex;
    flex-direction:row;
    font-style: bold;
    width: 100%;
    
    color: white;
    height: 100%;
    top: 20%;
}

.work > p{
    margin-top:0;

}


.role{
    
    font-size: 3vh;
    color: white;
    width: 100%;
    height: 100%;

}

.role > p{
    
    top: 2%;
    font-style: italic;
}

.role > ul{
    
    width: 100%;
    height: 100%;
    top: 6%;
    
}


#two > .role > ul{
    
}

